# squirrel_hri

squirrel_leg_detector/: CMakeLists.txt
squirrel_leg_detector/src/: leg_detector.cpp
squirrel_people_tracker/: CMakeLists.txt  package.xml
squirrel_people_tracker/include/squirrel_people_tracker/: follow_child.h
squirrel_people_tracker/launch/: spencer.launch
squirrel_people_tracker/src/: follow_child.cpp
