<?xml version="1.0"?>
<package>
  <name>squirrel_people_tracker</name>
  <version>0.0.1</version>
  <description>
    The squirrel_people_tracker package is intended to act as a single package
    to collect data from all nodes, that detect or track different features
    of humans. Some of them include leg detection and tracking via laser
    data, face detection in rgb(-d)/stereo camera data or full body skeleton
    tracking in rgbd.
    The squirrel_people_tracker merges this data and outputs the tracker people
    as people_msgs/People message and put this information into the
    knowledge database.
  </description>

  <maintainer email="bajones@acin.tuwien.ac.at">Markus Bajones</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>robotino_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>spencer_tracking_msgs</build_depend>
  <build_depend>squirrel_hri_msgs</build_depend>
  <build_depend>squirrel_speech_msgs</build_depend>
  <build_depend>squirrel_view_controller_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>robotino_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>spencer_detected_person_association</run_depend>
  <run_depend>spencer_people_tracking_launch</run_depend>
  <run_depend>spencer_tracking_msgs</run_depend>
  <run_depend>squirrel_hri_msgs</run_depend>
  <run_depend>squirrel_leg_detector</run_depend>
  <run_depend>squirrel_view_controller_msgs</run_depend>
  <run_depend>srl_nearest_neighbor_tracker</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
